--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   background: #4d69fa;
-  padding: 20px;
+  padding: 15px;
   border-radius: 5px;
   display: inline-block;
   border: none;
@@ -28,7 +28,7 @@ body {
 }
 
 .guess:hover {
-  background: #434343;
+  background: #a0379b;
   letter-spacing: 1px;
   -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
   -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
@@ -37,12 +37,20 @@ body {
 }
 
 .restart:hover {
-  background: #ed3330;
+  background: rgb(112, 187, 112);
   letter-spacing: 1px;
   -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
   -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
   box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
   transition: all 0.4s ease 0s;
+}
+
+input[type="text"] {
+  width: 40%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  font-family: "Boogaloo", sans-serif, cursive;
+  box-sizing: border-box;
 }
 
 .wrapper {
@@ -62,6 +70,58 @@ body {
   padding: 50px;
   position: relative;
 }
+
+.content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 2fr 1.5fr 1fr 1fr;
+  grid-template-areas:
+    ". title title noose"
+    "win win . noose"
+    "win win inputletter inputletter "
+    " current livesleft livesleft  incorrect";
+}
+
+#noose {
+  grid-area: noose;
+  background: url("wincnoose.png");
+  background-position: center;
+  background-size: cover;
+}
+
+#livesleft {
+  grid-area: livesleft;
+  align-self: center;
+  justify-self: center;
+}
+
+#inputletter {
+  grid-area: inputletter;
+  align-self: center;
+  justify-self: center;
+}
+
+.title {
+  grid-area: title;
+  text-align: center;
+}
+
+#current {
+  grid-area: current;
+  align-self: center;
+  justify-self: center;
+}
+
+#incorrect {
+  grid-area: incorrect;
+  align-self: center;
+  justify-self: center;
+}
+/* #youwin {
+  grid-area: win;
+  align-self: center;
+  justify-self: center;
+} */
 
 .wrapper:before {
   background: #4d69fa;
@@ -91,6 +151,9 @@ body {
 
 .win,
 .lose {
+  grid-area: win;
+  align-self: center;
+  justify-self: center;
   display: none;
 }
 
