--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 input[type="text"] {
-  width: 40%;
+  width: 35%;
   padding: 12px 20px;
   margin: 8px 0;
   font-family: "Boogaloo", sans-serif, cursive;
@@ -74,12 +74,21 @@ input[type="text"] {
 .content {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 2fr 1.5fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-areas:
     ". title title noose"
-    "win win . noose"
-    "win win inputletter inputletter "
+    "baseimg baseimg . noose"
+    "baseimg baseimg . noose"
+    "baseimg baseimg . noose"
+    "baseimg baseimg inputletter inputletter "
     " current livesleft livesleft  incorrect";
+}
+
+#baseimg {
+  grid-area: baseimg;
+  align-self: center;
+  justify-self: center;
+  display: block;
 }
 
 #noose {
@@ -149,18 +158,24 @@ input[type="text"] {
   color: #ffba00;
 }
 
-.win,
-.lose {
-  grid-area: win;
+.win {
+  grid-area: baseimg;
   align-self: center;
   justify-self: center;
   display: none;
 }
 
-.win h2 {
+.lose {
+  grid-area: baseimg;
+  margin-top: 50px;
+  align-self: center;
+  justify-self: center;
+  display: none;
+}
+/* .win h2 {
   color: red;
 }
 
 .lose h2 {
   color: blue;
-}
+} */
